btn hover transitions + fixed form overlap when resizing

--- a/client/src/css/Login.css
+++ b/client/src/css/Login.css
@@ -10,8 +10,8 @@
 
 .login__container {
   background-color: var(--white);
-  width: 500px;
-  height: 500px;
+  width: 550px;
+  height: 60vh;
   display: flex;
   border-radius: 12px;
   border: 1px solid var(--border-accent);
@@ -35,6 +35,11 @@
   font-weight: 800;
   font-size: 18px;
   color: var(--btn-text);
+  transition: all 0.25s ease-in-out;
+}
+
+.login__btnInput:hover {
+  background-color: var(--tea-greenHover);
 }
 
 .login__container form input {
